--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,7 @@
 	<classpathentry kind="lib" path="C:/Users/Fernando Lima/Documents/MEGA/TI/Eclipse Workspace/ProjetoClube/lib/jersey-server.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Fernando Lima/Documents/MEGA/TI/Eclipse Workspace/ProjetoClube/lib/javax.ws.rs-api-2.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Fernando Lima/Documents/MEGA/TI/Eclipse Workspace/ProjetoClube/lib/gson-2.2.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Fernando Lima/Documents/MEGA/TI/Eclipse Workspace/ProjetoClube/src/lib/jackson-core-asl-1.9.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Fernando Lima/Documents/MEGA/TI/Eclipse Workspace/ProjetoClube/src/lib/jackson-mapper-asl-1.7.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
